# cpp.wrap

./: .gitignore  .travis.yml  CMakeLists.txt  Jamfile.jam  Jamroot.jam  README.md
doc/: CMakeLists.txt  Jamfile.jam  basics.qbk  extended.qbk  faq.qbk  header.qbk  introduction.qbk  reference.qbk  tool.qbk  wrap.qbk
doc/images/: basics-cpp-steps.dot  basics-foo-bar-wrap.dot  basics-foo-bar.dot
example/: CMakeLists.txt  Jamfile.jam  fixed_stub.cpp  intro.cpp  multiple_stubs.cpp  template_stub.cpp
include/cpp/: wrap.hpp
include/cpp/wrap/: generator.hpp  outline.hpp
include/cpp/wrap/outline/: gcc.hpp
include/mw/: wrap.hpp
include/mw/wrap/: generator.hpp  outline.hpp
include/mw/wrap/outline/: gcc.hpp
src/: wrapper_main.cpp
src/cpp/wrap/: generator.cpp
src/cpp/wrap/outline/: gcc.cpp
src/mw/wrap/: generator.cpp
src/mw/wrap/outline/: gcc.cpp
test/: CMakeLists.txt  Jamfile.jam  dummy.cpp  test.cpp  test_dyn.cpp  test_impl.cpp  test_static.cpp  test_stub.cpp
